--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafe Nopek</title>
+    <title>Cafe Kelompok 1</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
@@ -11,7 +11,7 @@
 <body>
     <header class="app-header">
         <div class="container header-content">
-            <h1><i class="fas fa-coffee"></i> Cafe Lord Nopek</h1>
+            <h1><i class="fas fa-coffee"></i> Cafe Kelompok 1</h1>
         </div>
     </header>
 
